<resources>
    <string name="crop">Crop Insurance</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="sign_in">Sign In</string>
    <string name="phone">Phone</string>
    <string name="create_password">Create Password</string>
    <string name="retypepassword">Re-Enter Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_in">Login</string>
    <string name="create_account">Create Account</string>
    <string name="Back"><![CDATA[< Login]]></string>
    <string name="app_name">Deaf And Dump Talk</string>
    <string name="Name">Name</string>
    <string name="or">or</string>
    <string name="top_icon">top</string>
    <string name="google_icon">google</string>
    <string name="facebook_icon">facebook</string>
    <string name="new_user">New User?</string>
    <string name="phone_number">phone number</string>
    <string name="register">Register</string>
</resources>